src/test/ui/issues/issue-23589.stderr
error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/issue-23589.rs:2:15
   |
LL |     let v: Vec(&str) = vec!['1', '2'];
   |               ^^^^^^
   |               |
   |               only `Fn` traits may use parentheses
   |               help: use angle brackets instead: `<&str>`

error[E0308]: mismatched types
  --> $DIR/issue-23589.rs:2:29
   |
LL |     let v: Vec(&str) = vec!['1', '2'];
   |                             ^^^ expected &str, found char
   |
   = note: expected type `&str`
              found type `char`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0214, E0308.
For more information about an error, try `rustc --explain E0214`.
